Cleaned up code / duplicates and unnecessary parts, fixed section visibility  and removed unwanted files from project

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,10 +1,10 @@
 /******************************************************************
-  Template Name: Zogin
-  Description:  Phozogy Yoga HTML Template
-  Author: Colorlib
-  Author URI: https://colorlib.com
+  Template Name: Beyond Gravity
+  Description: Beyond Gravity Fitness HTML Template
+  Author: binarySOUL
+  Author URI: https://SpirosVatikiotis.info
   Version: 1.0
-  Created: Colorlib
+  Created: binarySOUL
 ******************************************************************/
 /*------------------------------------------------------------------
 [Table of contents]
@@ -168,19 +168,6 @@ ol {
   background: $primary-color;
   border-radius: 2px;
   letter-spacing: 2px;
-}
-
-.site-btn {
-  font-size: 14px;
-  color: $white-color;
-  font-weight: 700;
-  text-transform: uppercase;
-  display: inline-block;
-  padding: 14px 50px;
-  background: $primary-color;
-  border: none;
-  letter-spacing: 2px;
-  border-radius: 2px;
 }
 
 /* Preloder */
