--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -8,26 +8,6 @@
   
   /* Medium Device = 1200px */
   @media only screen and (min-width: 992px) and (max-width: 1199px) {
-    .hero__sliders.owl-carousel .owl-nav button {
-      left: 5px;
-    }
-  
-    .hero__sliders.owl-carousel .owl-nav button.owl-next {
-      right: 5px;
-    }
-  
-    .team__slider.owl-carousel .owl-nav button {
-      left: -5px;
-    }
-  
-    .team__slider.owl-carousel .owl-nav button.owl-next {
-      right: -5px;
-    }
-  
-    .counter__item {
-      margin-right: 50px;
-    }
-  
     .header__top__widget .primary-btn {
       display: none;
     }
@@ -51,51 +31,12 @@
       display: none;
     }
   
-    .hero__sliders.owl-carousel .owl-nav button {
-      left: 5px;
-    }
-  
-    .hero__sliders.owl-carousel .owl-nav button.owl-next {
-      right: 5px;
-    }
-  
     .about__pic {
       margin-bottom: 30px;
     }
   
-    .team__item__pic {
-      position: relative;
-      right: 0;
-      margin-bottom: 20px;
-      margin-top: -80px;
-    }
-  
-    .team__item {
-      padding: 30px 35px 40px;
-    }
-  
-    .team__slider.owl-carousel .owl-nav {
-      text-align: center;
-      padding-top: 50px;
-    }
-  
-    .team__slider.owl-carousel .owl-nav button {
-      position: relative;
-      left: 0;
-      top: 0;
-    }
-  
-    .team__slider.owl-carousel .owl-nav button.owl-next {
-      right: -10px;
-    }
-  
-  
     .blog__sidebar {
       margin-top: 50px;
-    }
-  
-    .counter__item {
-      margin-right: 50px;
     }
   }
   
@@ -103,16 +44,6 @@
   @media only screen and (max-width: 767px) {
     .appointment__text {
       padding: 60px 30px;
-    }
-  
-    .hero__sliders.owl-carousel .owl-nav button {
-      position: relative;
-      left: 15px;
-      bottom: 120px;
-    }
-  
-    .hero__sliders.owl-carousel .owl-nav button.owl-next {
-      right: -25px;
     }
   
     .home__about__pic__item {
@@ -129,32 +60,6 @@
   
     .about__pic {
       margin-bottom: 30px;
-    }
-  
-    .team__item__pic {
-      position: relative;
-      right: 0;
-      margin-bottom: 20px;
-      margin-top: -100px;
-    }
-  
-    .team__item {
-      padding: 30px 35px 40px;
-    }
-  
-    .team__slider.owl-carousel .owl-nav {
-      text-align: center;
-      padding-top: 50px;
-    }
-  
-    .team__slider.owl-carousel .owl-nav button {
-      position: relative;
-      left: 0;
-      top: 0;
-    }
-  
-    .team__slider.owl-carousel .owl-nav button.owl-next {
-      right: -10px;
     }
   
   
@@ -374,22 +279,8 @@
       line-height: normal;
     }
   
-    .hero__sliders.owl-carousel .owl-nav button {
-      bottom: 80px;
-    }
-  
-  
     .appointment .section-title h2 {
       font-size: 35px;
-    }
-  
-    .counter__item {
-      display: block;
-      margin-right: 0;
-    }
-  
-    .counter__text {
-      padding: 95px 30px 20px 50px;
     }
   
     .blog__details__author__pic {
